syntax = "proto3";

message NetworkMessage {
  uint32 packet_id = 1;
  uint32 protocol_version = 2;
  string server_ip = 3;
  uint32 server_port = 4;
  uint32 next_state_id = 5;
}